# finata

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  utils.rs
src/utils/: client.rs  mod.rs
src/website/: bilibili.rs  mod.rs  netease_cloud_music.rs  netease_music.rs  pixiv.rs  weibo.rs
tests/: tests.rs
