[package]
name = "finata"
version = "0.1.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1"
serde_json = "1.0"
thiserror = "1"
sugars = "1"
url = "2"