[package]
name = "finata"
version = "0.3.1"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2021"
repository = "https://github.com/snylonue/finata"
description = "finata"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
lazy_static = "1"
serde_json = "1.0"
sugars = "1"
url = "2"
snafu = "0.6.10"
async-trait = "0.1.42"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = "1.0"
nescookie = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }