[package]
name = "finata"
version = "0.3.2"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2021"
repository = "https://github.com/snylonue/finata"
description = "finata"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde_json = "1.0"
sugars = "1"
url = "2"
snafu = "0.6.10"
async-trait = "0.1.42"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
nescookie = "0.3"
futures-util = "0.3"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }